edited title for chart

--- a/netflix.ipynb
+++ b/netflix.ipynb
@@ -754,7 +754,7 @@
     }
    ],
    "source": [
-    "plot_category_counts(df, 'listed_in', plot_title='Top 10 Genres for Movies and TV Shows Combined', top_n=10)\n"
+    "plot_category_counts(df, 'listed_in', plot_title='Top 10 Genres', top_n=10)\n"
    ]
   },
   {
